--- a/message.html
+++ b/message.html
@@ -33,11 +33,10 @@ font-size:20px;
 border:none;
 background:none;
 font-size:24px;
-font-weight:900;
 cursor:pointer;
 }
 
-/* LIST */
+/* CHAT LIST */
 
 .chatList{
 padding:12px;
@@ -46,13 +45,19 @@ padding:12px;
 .chatItem{
 display:flex;
 align-items:center;
-gap:12px;
+justify-content:space-between;
 background:white;
 padding:14px;
 border-radius:14px;
 margin-bottom:10px;
 cursor:pointer;
 box-shadow:0 2px 8px rgba(0,0,0,.05);
+}
+
+.chatLeft{
+display:flex;
+align-items:center;
+gap:12px;
 }
 
 .avatar{
@@ -89,6 +94,23 @@ font-size:12px;
 color:#6b7280;
 }
 
+.unread{
+background:#2563eb;
+color:white;
+font-size:11px;
+padding:3px 7px;
+border-radius:10px;
+margin-left:6px;
+}
+
+.deleteChat{
+border:none;
+background:none;
+font-size:18px;
+cursor:pointer;
+color:#9ca3af;
+}
+
 /* CHAT BOX */
 
 .chatBox{
@@ -114,7 +136,7 @@ border-bottom:1px solid #e5e7eb;
 background:white;
 }
 
-.chatLeft{
+.chatLeftHeader{
 display:flex;
 align-items:center;
 gap:10px;
@@ -173,6 +195,13 @@ border-radius:10px;
 margin-top:6px;
 }
 
+.status{
+font-size:11px;
+color:#6b7280;
+margin-top:4px;
+text-align:right;
+}
+
 /* INPUT */
 
 .inputArea{
@@ -200,15 +229,18 @@ flex:1;
 padding:12px 14px;
 border-radius:20px;
 border:1px solid #ddd;
-font-size:16px; /* prevents iphone zoom */
+font-size:16px;
 }
 
 .row button{
 border:none;
 background:none;
 font-size:26px;
-font-weight:900;
 cursor:pointer;
+}
+
+.sendBtn{
+font-size:24px;
 }
 
 </style>
@@ -227,7 +259,7 @@ Messages
 
 <div class="chatHeader">
 
-<div class="chatLeft">
+<div class="chatLeftHeader">
 
 <button onclick="closeChat()">←</button>
 
@@ -259,7 +291,7 @@ Messages
 
 <input id="messageInput" placeholder="Type message">
 
-<button id="sendBtn">↑</button>
+<button id="sendBtn" class="sendBtn">↑</button>
 
 <input type="file" id="fileInput" accept="image/*" style="display:none">
 
@@ -273,7 +305,7 @@ Messages
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import { getAuth,onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-import { getFirestore,collection,addDoc,onSnapshot,query,orderBy,getDocs,updateDoc,doc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+import { getFirestore,collection,addDoc,onSnapshot,query,orderBy,getDocs,updateDoc,doc,deleteDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -307,6 +339,12 @@ loadChats();
 
 });
 
+function chatKey(a,b){
+return[a,b].sort().join("_");
+}
+
+/* USER PROFILE */
+
 async function getUser(email){
 
 let name=email.split("@")[0];
@@ -317,7 +355,6 @@ let online=false;
 const snap=await getDocs(collection(db,"users"));
 
 snap.forEach(d=>{
-
 const u=d.data();
 
 if(u.email===email){
@@ -333,10 +370,6 @@ return{name,rank,photo,online};
 
 }
 
-function chatKey(a,b){
-return[a,b].sort().join("_");
-}
-
 /* CHAT LIST */
 
 function loadChats(){
@@ -345,29 +378,36 @@ const q=query(collection(db,"messages"),orderBy("createdAt"));
 
 onSnapshot(q,async(snap)=>{
 
-const map={};
+const chats={};
 
 snap.forEach(d=>{
-
 const m=d.data();
 
 if(m.from!==currentEmail && m.to!==currentEmail)return;
 
 const other=m.from===currentEmail?m.to:m.from;
 
-map[other]=m;
+if(!chats[other]){
+chats[other]={last:m,unread:0};
+}
+
+if(m.to===currentEmail && !m.seen){
+chats[other].unread++;
+}
 
 });
 
 chatList.innerHTML="";
 
-for(const email in map){
+for(const email in chats){
 
 const p=await getUser(email);
 
 chatList.innerHTML+=`
 
-<div class="chatItem" onclick="openChat('${email}')">
+<div class="chatItem">
+
+<div class="chatLeft" onclick="openChat('${email}')">
 
 <div class="avatarWrap">
 <img class="avatar" src="${p.photo}">
@@ -375,9 +415,15 @@ chatList.innerHTML+=`
 </div>
 
 <div>
-<div class="name">${p.name}</div>
+<div class="name">${p.name}
+${chats[email].unread>0?`<span class="unread">${chats[email].unread}</span>`:''}
+</div>
 <div class="rank">${p.rank}</div>
 </div>
+
+</div>
+
+<button class="deleteChat" onclick="deleteChat('${email}')">✕</button>
 
 </div>
 
@@ -385,6 +431,26 @@ chatList.innerHTML+=`
 
 }
 
+});
+
+}
+
+/* DELETE CHAT */
+
+window.deleteChat=async function(email){
+
+const confirmDelete=confirm("Delete this chat?");
+if(!confirmDelete)return;
+
+const key=chatKey(currentEmail,email);
+
+const snap=await getDocs(collection(db,"messages"));
+
+snap.forEach(async d=>{
+const m=d.data();
+if(m.chatId===key){
+await deleteDoc(doc(db,"messages",d.id));
+}
 });
 
 }
@@ -406,17 +472,40 @@ chatOnline.className="online "+(p.online?'on':'off');
 
 chatBox.style.display="flex";
 
+markSeen();
+
 loadMessages();
 
-};
+}
+
+/* MARK SEEN */
+
+async function markSeen(){
+
+const snap=await getDocs(collection(db,"messages"));
+
+snap.forEach(async d=>{
+const m=d.data();
+
+if(m.chatId===chatId && m.to===currentEmail && !m.seen){
+
+await updateDoc(doc(db,"messages",d.id),{
+seen:true
+});
+
+}
+
+});
+
+}
 
 window.closeChat=function(){
 chatBox.style.display="none";
-};
+}
 
 window.startCall=function(){
 alert("Call feature coming soon");
-};
+}
 
 /* LOAD MESSAGES */
 
@@ -446,6 +535,8 @@ ${m.text||""}
 
 ${m.photo?`<img src="${m.photo}" class="chatPhoto">`:""}
 
+${me?`<div class="status">${m.seen?'✓✓ Seen':'✓ Sent'}</div>`:''}
+
 </div>
 
 </div>
@@ -460,7 +551,7 @@ messages.scrollTop=messages.scrollHeight;
 
 }
 
-/* PREVIEW */
+/* FILE PREVIEW */
 
 fileInput.onchange=function(){
 
@@ -471,7 +562,7 @@ if(!f)return;
 preview.src=URL.createObjectURL(f);
 preview.style.display="block";
 
-};
+}
 
 /* SEND */
 
@@ -493,6 +584,7 @@ from:currentEmail,
 to:chatUser,
 text:text,
 photo:photo,
+seen:false,
 createdAt:Date.now()
 
 });
@@ -523,7 +615,7 @@ photo:data.data.url
 
 }
 
-};
+}
 
 </script>
 
