--- a/message.html
+++ b/message.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
 <title>SeaConnect Messages</title>
 
@@ -33,6 +33,7 @@ font-size:20px;
 border:none;
 background:none;
 font-size:24px;
+font-weight:900;
 cursor:pointer;
 }
 
@@ -50,7 +51,6 @@ background:white;
 padding:14px;
 border-radius:14px;
 margin-bottom:10px;
-cursor:pointer;
 box-shadow:0 2px 8px rgba(0,0,0,.05);
 }
 
@@ -58,6 +58,13 @@ box-shadow:0 2px 8px rgba(0,0,0,.05);
 display:flex;
 align-items:center;
 gap:12px;
+cursor:pointer;
+}
+
+.deleteBtn{
+font-size:18px;
+cursor:pointer;
+color:#ef4444;
 }
 
 .avatar{
@@ -94,21 +101,10 @@ font-size:12px;
 color:#6b7280;
 }
 
-.unread{
-background:#2563eb;
-color:white;
+.status{
 font-size:11px;
-padding:3px 7px;
-border-radius:10px;
-margin-left:6px;
-}
-
-.deleteChat{
-border:none;
-background:none;
-font-size:18px;
-cursor:pointer;
-color:#9ca3af;
+color:#2563eb;
+font-weight:700;
 }
 
 /* CHAT BOX */
@@ -142,15 +138,14 @@ align-items:center;
 gap:10px;
 }
 
-.chatHeader img{
+.avatarHeader{
+position:relative;
+}
+
+.avatarHeader img{
 width:38px;
 height:38px;
 border-radius:50%;
-object-fit:cover;
-}
-
-.avatarHeader{
-position:relative;
 }
 
 .avatarHeader .online{
@@ -195,7 +190,7 @@ border-radius:10px;
 margin-top:6px;
 }
 
-.status{
+.msgStatus{
 font-size:11px;
 color:#6b7280;
 margin-top:4px;
@@ -220,12 +215,14 @@ border-radius:8px;
 
 .row{
 display:flex;
-gap:8px;
 align-items:center;
+gap:8px;
+width:100%;
 }
 
 .row input{
 flex:1;
+min-width:0;
 padding:12px 14px;
 border-radius:20px;
 border:1px solid #ddd;
@@ -233,14 +230,23 @@ font-size:16px;
 }
 
 .row button{
+flex-shrink:0;
+width:42px;
+height:42px;
 border:none;
-background:none;
-font-size:26px;
+background:#2563eb;
+color:white;
+border-radius:50%;
+font-size:20px;
 cursor:pointer;
+display:flex;
+align-items:center;
+justify-content:center;
 }
 
-.sendBtn{
-font-size:24px;
+.row button:first-child{
+background:#e5e7eb;
+color:#111;
 }
 
 </style>
@@ -291,7 +297,7 @@ Messages
 
 <input id="messageInput" placeholder="Type message">
 
-<button id="sendBtn" class="sendBtn">↑</button>
+<button id="sendBtn">↑</button>
 
 <input type="file" id="fileInput" accept="image/*" style="display:none">
 
@@ -339,12 +345,6 @@ loadChats();
 
 });
 
-function chatKey(a,b){
-return[a,b].sort().join("_");
-}
-
-/* USER PROFILE */
-
 async function getUser(email){
 
 let name=email.split("@")[0];
@@ -370,6 +370,10 @@ return{name,rank,photo,online};
 
 }
 
+function chatKey(a,b){
+return[a,b].sort().join("_");
+}
+
 /* CHAT LIST */
 
 function loadChats(){
@@ -378,7 +382,7 @@ const q=query(collection(db,"messages"),orderBy("createdAt"));
 
 onSnapshot(q,async(snap)=>{
 
-const chats={};
+const map={};
 
 snap.forEach(d=>{
 const m=d.data();
@@ -387,19 +391,12 @@ if(m.from!==currentEmail && m.to!==currentEmail)return;
 
 const other=m.from===currentEmail?m.to:m.from;
 
-if(!chats[other]){
-chats[other]={last:m,unread:0};
-}
-
-if(m.to===currentEmail && !m.seen){
-chats[other].unread++;
-}
-
+map[other]=m;
 });
 
 chatList.innerHTML="";
 
-for(const email in chats){
+for(const email in map){
 
 const p=await getUser(email);
 
@@ -415,18 +412,16 @@ chatList.innerHTML+=`
 </div>
 
 <div>
-<div class="name">${p.name}
-${chats[email].unread>0?`<span class="unread">${chats[email].unread}</span>`:''}
-</div>
+<div class="name">${p.name}</div>
 <div class="rank">${p.rank}</div>
+<div class="status">${map[email].seen?'Read':'Unread'}</div>
 </div>
 
 </div>
 
-<button class="deleteChat" onclick="deleteChat('${email}')">✕</button>
+<div class="deleteBtn" onclick="deleteChat('${email}')">✕</div>
 
 </div>
-
 `;
 
 }
@@ -437,23 +432,26 @@ ${chats[email].unread>0?`<span class="unread">${chats[email].unread}</span>`:''}
 
 /* DELETE CHAT */
 
-window.deleteChat=async function(email){
+window.deleteChat=function(email){
 
-const confirmDelete=confirm("Delete this chat?");
-if(!confirmDelete)return;
+if(!confirm("Delete conversation?")) return;
 
-const key=chatKey(currentEmail,email);
+const q=query(collection(db,"messages"));
 
-const snap=await getDocs(collection(db,"messages"));
+onSnapshot(q,(snap)=>{
 
 snap.forEach(async d=>{
 const m=d.data();
-if(m.chatId===key){
+
+if(chatKey(m.from,m.to)===chatKey(currentEmail,email)){
 await deleteDoc(doc(db,"messages",d.id));
 }
+
 });
 
-}
+});
+
+};
 
 /* OPEN CHAT */
 
@@ -472,40 +470,19 @@ chatOnline.className="online "+(p.online?'on':'off');
 
 chatBox.style.display="flex";
 
-markSeen();
+messages.innerHTML="";
 
 loadMessages();
 
-}
-
-/* MARK SEEN */
-
-async function markSeen(){
-
-const snap=await getDocs(collection(db,"messages"));
-
-snap.forEach(async d=>{
-const m=d.data();
-
-if(m.chatId===chatId && m.to===currentEmail && !m.seen){
-
-await updateDoc(doc(db,"messages",d.id),{
-seen:true
-});
-
-}
-
-});
-
-}
+};
 
 window.closeChat=function(){
 chatBox.style.display="none";
-}
+};
 
 window.startCall=function(){
 alert("Call feature coming soon");
-}
+};
 
 /* LOAD MESSAGES */
 
@@ -535,12 +512,11 @@ ${m.text||""}
 
 ${m.photo?`<img src="${m.photo}" class="chatPhoto">`:""}
 
-${me?`<div class="status">${m.seen?'✓✓ Seen':'✓ Sent'}</div>`:''}
+${me?`<div class="msgStatus">${m.seen?'✓✓ Seen':'✓ Sent'}</div>`:''}
 
 </div>
 
 </div>
-
 `;
 
 });
@@ -551,7 +527,7 @@ messages.scrollTop=messages.scrollHeight;
 
 }
 
-/* FILE PREVIEW */
+/* PREVIEW */
 
 fileInput.onchange=function(){
 
@@ -562,7 +538,7 @@ if(!f)return;
 preview.src=URL.createObjectURL(f);
 preview.style.display="block";
 
-}
+};
 
 /* SEND */
 
@@ -615,7 +591,7 @@ photo:data.data.url
 
 }
 
-}
+};
 
 </script>
 
