--- a/message.html
+++ b/message.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <title>SeaConnect Messages</title>
 
@@ -37,7 +37,7 @@ font-weight:900;
 cursor:pointer;
 }
 
-/* CHAT LIST */
+/* LIST */
 
 .chatList{
 padding:12px;
@@ -63,9 +63,11 @@ cursor:pointer;
 
 .deleteBtn{
 font-size:18px;
-cursor:pointer;
 color:#ef4444;
+cursor:pointer;
 }
+
+/* AVATAR */
 
 .avatar{
 width:50px;
@@ -103,8 +105,16 @@ color:#6b7280;
 
 .status{
 font-size:11px;
-color:#2563eb;
 font-weight:700;
+margin-top:3px;
+}
+
+.unread{
+color:#2563eb;
+}
+
+.read{
+color:#9ca3af;
 }
 
 /* CHAT BOX */
@@ -146,6 +156,7 @@ position:relative;
 width:38px;
 height:38px;
 border-radius:50%;
+object-fit:cover;
 }
 
 .avatarHeader .online{
@@ -215,29 +226,26 @@ border-radius:8px;
 
 .row{
 display:flex;
-align-items:center;
 gap:8px;
-width:100%;
+align-items:center;
 }
 
 .row input{
 flex:1;
-min-width:0;
 padding:12px 14px;
 border-radius:20px;
 border:1px solid #ddd;
-font-size:16px;
+font-size:16px; /* prevents iphone zoom */
 }
 
 .row button{
-flex-shrink:0;
-width:42px;
-height:42px;
+width:40px;
+height:40px;
 border:none;
 background:#2563eb;
 color:white;
 border-radius:50%;
-font-size:20px;
+font-size:18px;
 cursor:pointer;
 display:flex;
 align-items:center;
@@ -332,6 +340,8 @@ let chatId;
 const chatList=document.getElementById("chatList");
 const messages=document.getElementById("messages");
 
+/* LOGIN */
+
 onAuthStateChanged(auth,(user)=>{
 
 if(!user){
@@ -345,6 +355,8 @@ loadChats();
 
 });
 
+/* USER */
+
 async function getUser(email){
 
 let name=email.split("@")[0];
@@ -355,6 +367,7 @@ let online=false;
 const snap=await getDocs(collection(db,"users"));
 
 snap.forEach(d=>{
+
 const u=d.data();
 
 if(u.email===email){
@@ -385,6 +398,7 @@ onSnapshot(q,async(snap)=>{
 const map={};
 
 snap.forEach(d=>{
+
 const m=d.data();
 
 if(m.from!==currentEmail && m.to!==currentEmail)return;
@@ -392,6 +406,7 @@ if(m.from!==currentEmail && m.to!==currentEmail)return;
 const other=m.from===currentEmail?m.to:m.from;
 
 map[other]=m;
+
 });
 
 chatList.innerHTML="";
@@ -399,6 +414,7 @@ chatList.innerHTML="";
 for(const email in map){
 
 const p=await getUser(email);
+const last=map[email];
 
 chatList.innerHTML+=`
 
@@ -414,7 +430,7 @@ chatList.innerHTML+=`
 <div>
 <div class="name">${p.name}</div>
 <div class="rank">${p.rank}</div>
-<div class="status">${map[email].seen?'Read':'Unread'}</div>
+<div class="status ${last.seen?'read':'unread'}">${last.seen?'Read':'Unread'}</div>
 </div>
 
 </div>
@@ -422,6 +438,7 @@ chatList.innerHTML+=`
 <div class="deleteBtn" onclick="deleteChat('${email}')">✕</div>
 
 </div>
+
 `;
 
 }
@@ -434,13 +451,14 @@ chatList.innerHTML+=`
 
 window.deleteChat=function(email){
 
-if(!confirm("Delete conversation?")) return;
+if(!confirm("Delete chat?")) return;
 
 const q=query(collection(db,"messages"));
 
 onSnapshot(q,(snap)=>{
 
 snap.forEach(async d=>{
+
 const m=d.data();
 
 if(chatKey(m.from,m.to)===chatKey(currentEmail,email)){
@@ -470,11 +488,11 @@ chatOnline.className="online "+(p.online?'on':'off');
 
 chatBox.style.display="flex";
 
-messages.innerHTML="";
-
 loadMessages();
 
 };
+
+/* CLOSE CHAT */
 
 window.closeChat=function(){
 chatBox.style.display="none";
@@ -494,13 +512,19 @@ onSnapshot(q,(snap)=>{
 
 messages.innerHTML="";
 
-snap.forEach(d=>{
+snap.forEach(async d=>{
 
 const m=d.data();
 
 if(m.chatId!==chatId)return;
 
 const me=m.from===currentEmail;
+
+if(m.to===currentEmail && !m.seen){
+
+await updateDoc(doc(db,"messages",d.id),{seen:true});
+
+}
 
 messages.innerHTML+=`
 
@@ -517,6 +541,7 @@ ${me?`<div class="msgStatus">${m.seen?'✓✓ Seen':'✓ Sent'}</div>`:''}
 </div>
 
 </div>
+
 `;
 
 });
